--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string-array name="status_picks">
+        <item>Status</item>
+        <item>Administrator</item>
+        <item>Developer</item>
+        <item>HR</item>
+        <item>Manager</item>
+        <item>Support</item>
+    </string-array>
 </resources>
